<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/no_auth_icon_description"
        android:padding="@dimen/pad_16"
        app:layout_constraintBottom_toTopOf="@+id/noauth_message_signin"
        app:layout_constraintEnd_toEndOf="@+id/noauth_message_signin"
        app:layout_constraintStart_toStartOf="@+id/noauth_message_signin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_pets_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noauth_message_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/noauth_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/noauth_message_signin"
        app:layout_constraintStart_toStartOf="@+id/noauth_message_signin"
        app:layout_constraintTop_toBottomOf="@+id/noauth_message_signin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signin"
            style="@style/ButtonPrimaryContained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_16"
            android:layout_marginRight="@dimen/pad_16"
            android:text="@string/button_signin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signup"
            style="@style/ButtonPrimaryContained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>